force-app/main/default/objects/sma__MAFolderPermission__c/sma__MAFolderPermission__c.object-meta.xml
<CustomObject>
    <label>MapAnything Folder Permission</label>
    <nameField>
        <displayFormat>FP{00000000}</displayFormat>
        <label>Folder Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Folder Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>