force-app/main/default/objects/sma__MAFolderPermission__c/fields/sma__Export__c.field-meta.xml
<CustomField>
    <fullName>sma__Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Export</label>
    <type>Checkbox</type>
</CustomField>