force-app/main/default/objects/sma__MAFolderPermission__c/fields/sma__Folder__c.field-meta.xml
<CustomField>
    <fullName>sma__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folder</label>
    <referenceTo>sma__MAFolder__c</referenceTo>
    <relationshipLabel>MapAnything Folder Permissions</relationshipLabel>
    <relationshipName>MapAnything_Folder_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>