force-app/main/default/objects/sma__MAFolderPermission__c/fields/sma__ProfileId__c.field-meta.xml
<CustomField>
    <fullName>sma__ProfileId__c</fullName>
    <label>Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>