force-app/main/default/objects/sma__MAFolderPermission__c/fields/sma__Read__c.field-meta.xml
<CustomField>
    <fullName>sma__Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read</label>
    <type>Checkbox</type>
</CustomField>