force-app/main/default/objects/sma__MAFolderPermission__c/fields/sma__SetPermissions__c.field-meta.xml
<CustomField>
    <fullName>sma__SetPermissions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Permissions</label>
    <type>Checkbox</type>
</CustomField>