force-app/main/default/objects/sma__MAFolderPermission__c/listViews/sma__All.listView-meta.xml
<ListView>
    <fullName>sma__All</fullName>
    <columns>NAME</columns>
    <columns>sma__Folder__c</columns>
    <columns>sma__User__c</columns>
    <columns>sma__ProfileId__c</columns>
    <columns>sma__Create__c</columns>
    <columns>sma__Modify__c</columns>
    <columns>sma__Delete__c</columns>
    <columns>sma__SetPermissions__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>